--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,24 @@ body {
   display: block;
   width: 60px;
   height: 60px;
-  border: 1px solid #bbb;
-  margin: 4px;
+  border: 2px solid #d4d4d4;
+  margin: 3px;
   text-align: center;
   line-height: 60px;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 2.5em;
+}
+
+.row > div.green {
+  background: #6aaa64;
+  border-color: #6aaa64;
+}
+.row > div.grey {
+  background: #787c7e;
+  border-color: #787c7e;
+}
+.row > div.yellow {
+  background: #c9b458;
+  border-color: #c9b458;
 }
