--- a/src/index.css
+++ b/src/index.css
@@ -35,14 +35,72 @@ body {
 }
 
 .row > div.green {
-  background: #6aaa64;
-  border-color: #6aaa64;
+  --background: #6aaa64;
+  --border-color: #6aaa64;
+  animation: flip 0.8s ease forwards;
 }
 .row > div.grey {
-  background: #787c7e;
-  border-color: #787c7e;
+  --background: #787c7e;
+  --border-color: #787c7e;
+  animation: flip 0.8s ease forwards;
 }
 .row > div.yellow {
-  background: #c9b458;
-  border-color: #c9b458;
+  --background: #c9b458;
+  --border-color: #c9b458;
+  animation: flip 0.8s ease forwards;
+}
+
+.row > div:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.row > div:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.row > div:nth-child(4) {
+  animation-delay: 0.9s;
+}
+.row > div:nth-child(5) {
+  animation-delay: 1.2s;
+}
+.row.current > div.filled {
+  animation: bounce 0.1s ease-in-out forwards;
+}
+
+/* keyframe animations */
+@keyframes flip {
+  0% {
+    transform: rotateX(0);
+    background: #fff;
+    border-color: #333;
+  }
+  45% {
+    transform: rotateX(90deg);
+    background: white;
+    border-color: #333;
+  }
+  55% {
+    transform: rotateX(90deg);
+    background: var(--background);
+    border-color: var(--border-color);
+  }
+  100% {
+    transform: rotateX(0deg);
+    background: var(--background);
+    border-color: var(--border-color);
+    color: #eee;
+  }
+}
+
+@keyframes bounce {
+  0% { 
+    transform: scale(1);
+    border-color: #ddd;
+  }
+  50% { 
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+    border-color: #878a8c;
+  }
 }
